--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
@@ -3,12 +3,11 @@
 @using ChartJs.Blazor.ChartJS.LineChart
 @using ChartJs.Blazor.Util.Color
 
-
 <h2>Filled Line Chart</h2>
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
-<ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300"/>
+<ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300" />
 
 @functions{
 
@@ -25,7 +24,7 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Title = new OptionsTitle {Display = "title?", Text = "Text?"},
+                Title = new OptionsTitle { Display = "title?", Text = "Text?" },
                 Tooltips = new Tooltips
                 {
                     Mode = Mode.nearest,
@@ -34,29 +33,29 @@
                 Scales = new Scales
                 {
                     xAxes = new List<Axis>
+                {
+                    new Axis
                     {
-                        new Axis
+                        Display = "xAxesDisplay",
+                        ScaleLabel = new ScaleLabel
                         {
-                            Display = "xAxesDisplay",
-                            ScaleLabel = new ScaleLabel
-                            {
-                                Display = ".",
-                                LabelString = ".labelString"
-                            }
-                        }
-                    },
-                    yAxes = new List<Axis>
-                    {
-                        new Axis
-                        {
-                            Display = "yAxes",
-                            ScaleLabel = new ScaleLabel
-                            {
-                                Display = "..",
-                                LabelString = "..label"
-                            }
+                            Display = ".",
+                            LabelString = ".labelString"
                         }
                     }
+                },
+                    yAxes = new List<Axis>
+                {
+                    new Axis
+                    {
+                        Display = "yAxes",
+                        ScaleLabel = new ScaleLabel
+                        {
+                            Display = "..",
+                            LabelString = "..label"
+                        }
+                    }
+                }
                 },
                 Hover = new LineChartOptionsHover
                 {
@@ -66,32 +65,32 @@
             },
             Data = new LineChartData
             {
-                Labels = new List<string> {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
+                Labels = new List<string> { "Red", "Blue", "Yellow", "Green", "Purple", "Orange" },
                 Datasets = new List<LineChartDataset>
+            {
+                new LineChartDataset
                 {
-                    new LineChartDataset
-                    {
-                        BackgroundColor = "#ff6384",
-                        BorderColor = "#ff6384",
-                        Label = "# of Votes from blazor",
-                        Data = new List<dynamic> {4, 6, 2, 7, 9, 1},
-                        Fill = true,
-                        BorderWidth = 2,
-                        PointRadius = 3,
-                        PointBorderWidth = 1
-                    },
-                    new LineChartDataset
-                    {
-                        BackgroundColor = ColorUtil.ColorString(34, 78, 234, 0.56),
-                        BorderColor = ColorUtil.ColorString(34, 78, 234, 0.56),
-                        Label = "# of Votes from blazor",
-                        Data = new List<dynamic> {14, 16, 12, 17, 19, 11},
-                        Fill = true,
-                        BorderWidth = 2,
-                        PointRadius = 3,
-                        PointBorderWidth = 1
-                    }
+                    BackgroundColor = "#ff6384",
+                    BorderColor = "#ff6384",
+                    Label = "# of Votes from blazor",
+                    Data = new List<dynamic> {4, 6, 2, 7, 9, 1},
+                    Fill = true,
+                    BorderWidth = 2,
+                    PointRadius = 3,
+                    PointBorderWidth = 1
+                },
+                new LineChartDataset
+                {
+                    BackgroundColor = ColorUtil.ColorString(34, 78, 234, 0.56),
+                    BorderColor = ColorUtil.ColorString(34, 78, 234, 0.56),
+                    Label = "# of Votes from blazor",
+                    Data = new List<dynamic> {14, 16, 12, 17, 19, 11},
+                    Fill = true,
+                    BorderWidth = 2,
+                    PointRadius = 3,
+                    PointBorderWidth = 1
                 }
+            }
             }
         };
     }
@@ -99,12 +98,12 @@
     protected override void OnAfterRender()
     {
         Console.WriteLine("OnAfterRender");
-        lineChartJs.UpdateChart(lineChartConfig);
+        lineChartJs.Reload();
     }
 
     public void UpdateChart()
     {
-    //Update existing dataset
+        //Update existing dataset
         var rand = new Random();
         lineChartConfig.Data.Labels.Add($"New{DateTime.Now.Second}");
         var newVal = rand.Next(lineChartConfig.Data.Datasets.SelectMany(dataset => dataset.Data).Cast<int>().Max());
@@ -115,16 +114,14 @@
             newVal += rand.Next(4);
         });
 
-        lineChartJs.UpdateChart(lineChartConfig);
+        lineChartJs.Reload();
     }
-
 
     protected override Task OnInitAsync()
     {
         Console.WriteLine("OnInitAsync");
         return Task.CompletedTask;
     }
-
 
     protected override void OnParametersSet()
     {
@@ -137,13 +134,11 @@
         return Task.CompletedTask;
     }
 
-
     protected override bool ShouldRender()
     {
         Console.WriteLine("ShouldRender");
         return true;
     }
-
 
     protected override Task OnAfterRenderAsync()
     {
