--- a/src/ChartJs.Blazor/Charts/ChartJsBarChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsBarChart.cshtml
@@ -23,9 +23,15 @@
         ChartJsInterop.InitializeBarChart(Config);
     }
 
-    public void Update()
+    public void Reload()
     {
         ChartJsInterop.ReloadBarChart(Config);
+    }
+
+
+    public void Update()
+    {
+        ChartJsInterop.UpdateBarChart(Config);
     }
 
 }
