--- a/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
@@ -55,17 +55,17 @@
     protected override void OnAfterRender()
     {
         Console.WriteLine("OnAfterRender - bar");
-    //barChartJs.UpdateChart(barChartDat, barChartoptionsa);
-        barChart.Update();
+        //barChartJs.UpdateChart(barChartDat, barChartoptionsa);
+        barChart.Reload();
     }
 
     private void UpdateChart()
     {
-    //Update existing dataset
+        //Update existing dataset
         barChartConfig.Data.Labels.Add($"{DateTime.Now.Second}");
         barChartConfig.Data.Datasets.ForEach(dataset => { dataset.Data.Add(DateTime.Now.Second); });
 
-        barChart.Update();
+        barChart.Reload();
     }
 
 }
