--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -8,7 +8,7 @@
 <div class=@(collapseNavMenu ? "collapse" : null) onclick=@ToggleNavMenu>
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/radarchart">
+            <NavLink class="nav-link" href="/RadarChart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Radar Chart
             </NavLink>
         </li>
