Added ScatterChart support

--- a/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
@@ -24,7 +24,7 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Title = new OptionsTitle() {Display = "IUG", Text = "I R TITLE"},
+                Title = new OptionsTitle() {Display = true, Text = "I R TITLE"},
                 Tooltips = new Tooltips() {Mode = Mode.point},
             },
             Data = new BubbleChartData
