--- a/samples/ChartJs.Blazor.Sample/Pages/PolarAreaChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/PolarAreaChart.cshtml
@@ -24,7 +24,7 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Title = new OptionsTitle {Display = "IUG", Text = "I R TITLE"},
+                Title = new OptionsTitle {Display = true, Text = "I R TITLE"},
                 Animation = new DoughnutAnimation {AnimateScale = true, AnimateRotate = true},
                 Scale = new PolarAreaScale {Ticks = new Ticks {BeginAtZero = true}},
                 Legend = new PolarAreaLegend {Position = Position.TOP}
