--- a/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
@@ -24,7 +24,7 @@
                 Text = "Sample chart from Blazor",
                 Responsive = true,
                 Display = true,
-                Title = new OptionsTitle {Display = "radar chart title display", Text = "some text"},
+                Title = new OptionsTitle {Display = true, Text = "some text"},
                 Legend = new RadarChartLegend {Position = Position.TOP},
                 Scale = new Scale {Ticks = new Ticks {BeginAtZero = true}}
             },
