--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
@@ -24,7 +24,7 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Title = new OptionsTitle { Display = "title?", Text = "Text?" },
+                Title = new OptionsTitle { Display = true, Text = "Text?" },
                 Tooltips = new Tooltips
                 {
                     Mode = Mode.nearest,
