--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -78,6 +78,12 @@
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Doughnut Chart
             </NavLink>
         </li>
+        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/scatterchart">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Scatter Chart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
