--- a/samples/ChartJs.Blazor.Sample/Pages/BarCharts/StackedBarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/BarCharts/StackedBarChart.cshtml
@@ -12,6 +12,8 @@
                      Width="600"
                      Height="300"/>
 
+    <DataSetDisplay DataSets="@barChartConfig.Data.Datasets" Width="600" Height="300" />
+
 @functions {
 
     private ChartJsBarChart barChart { get; set; }
