--- a/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/BubbleChart.cshtml
@@ -9,6 +9,8 @@
 </div>
 <ChartJsBubbleChart ref="bubbleChartJs" Config="@bubbleChartConfig" Width="600" Height="300"/>
 
+<DataSetDisplay DataSets="@bubbleChartConfig.Data.Datasets" Width="600" Height="300" />
+
 @functions{
 
     public BubbleChartConfig bubbleChartConfig { get; set; }
