--- a/samples/ChartJs.Blazor.Sample/Pages/PieChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/PieChart.cshtml
@@ -8,6 +8,8 @@
 </div>
 <ChartJsPieChart ref="pieChartJs" Config="@pieChartConfig" Width="600" Height="300"/>
 
+<DataSetDisplay DataSets="@pieChartConfig.Data.Datasets" Width="600" Height="300" />
+
 @functions{
 
     private PieChartConfig pieChartConfig { get; set; }
