--- a/samples/ChartJs.Blazor.Sample/Pages/PolarAreaChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/PolarAreaChart.cshtml
@@ -9,6 +9,8 @@
 </div>
 <ChartJsPolarAreaChart ref="polarAreaChart" Config="@polarAreaChartConfig" Width="600" Height="300"/>
 
+<DataSetDisplay DataSets="@polarAreaChartConfig.Data.Datasets" Width="600" Height="300" />
+
 @functions{
 
     public PolarAreaChartConfig polarAreaChartConfig { get; set; }
