--- a/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
@@ -9,6 +9,8 @@
 </div>
 <ChartJsRadarChart ref="radarChartJs" Config="@radarChartConfig" Width="600" Height="300"/>
 
+<DataSetDisplay DataSets="@radarChartConfig.Data.Datasets" Width="600" Height="300" />
+
 @functions {
 
     private RadarChartConfig radarChartConfig { get; set; }
