1. Updated NuGet package release notes
2. removed the line from the ScatterChart

--- a/samples/ChartJs.Blazor.Sample/Pages/ScatterChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/ScatterChart.cshtml
@@ -53,7 +53,8 @@
                         BorderWidth = 3,
                         PointRadius = 5,
                         PointHitRadius = 5,
-                        Data = points
+                        Data = points, 
+                        ShowLine = false
                     },
     //new ScatterConfigDataset
     //{
