Added an About page

--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="/">Blazor ChartJS</a>
+    <a class="navbar-brand" href="/">ChartJS.Blazor</a>
     <button class="navbar-toggler" onclick=@ToggleNavMenu>
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -85,6 +85,12 @@
             </NavLink>
         </li>
     </ul>
+</div>
+
+<div class="top-row pl-4 navbar navbar-dark">
+    <NavLink class="nav-link" href="/about">
+        <span class="oi oi-bar-chart" aria-hidden="true"></span> About
+    </NavLink>
 </div>
 
 @functions {
