--- a/samples/ChartJs.Blazor.Sample/wwwroot/css/site.css
+++ b/samples/ChartJs.Blazor.Sample/wwwroot/css/site.css
@@ -120,4 +120,20 @@ app {
         /* Never collapse the sidebar for wide screens */
         display: block;
     }
+
+
+
+    .bg-1 { 
+        background-color: #1abc9c; /* Green */
+        color: #ffffff;
+    }
+    .bg-2 { 
+        background-color: #474e5d; /* Dark Blue */
+        color: #ffffff;
+    }
+    .bg-3 { 
+        background-color: #ffffff; /* White */
+        color: #555555;
+    }
+
 }
